syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/games";
package api.games;

message UpdateEightBallSettings {
	repeated string answers = 1;
	bool enabled = 2;
}

message EightBallSettingsResponse {
	repeated string answers = 1;
	bool enabled = 2;
}

message RussianRouletteSettingsResponse {
	bool enabled = 1;
	bool can_be_used_by_moderator = 2;
	int32 timeout_seconds = 3;
	int32 decision_seconds = 4;
	string init_message = 5;
	string survive_message = 6;
	string death_message = 7;
	int32 charged_bullets = 8;
	int32 tumber_size = 9;
}

message UpdateRussianRouletteSettings {
	bool enabled = 1;
	bool can_be_used_by_moderator = 2;
	int32 timeout_seconds = 3;
	int32 decision_seconds = 4;
	string init_message = 5;
	string survive_message = 6;
	string death_message = 7;
	int32 charged_bullets = 8;
	int32 tumber_size = 9;
}
